deploy/netbox/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbox
  labels:
    app.kubernetes.io/name: netbox
    platform-gateway-access: allowed
